--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,8 @@
 
  @import "bootstrap/scss/bootstrap";
  @import "posts";
- @import "homes";  
+ @import "homes";
+ @import "users"; 
  
  html,
  body {
